[package]
name = "rust-kv"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1" # 高效处理网络buffer的库
dashmap = "4" # 并发map
http = "0.2"  # 使用 HTTP status code所以引入这个库
prost = "0.9" # 处理protobuf的代码
thiserror = "1" # 错误定义和处理
tracing = "0.1" # 日志处理
futures = "0.3" # 提供Stream trait
anyhow = "1" # 错误处理
tokio = { version = "1", features = ["rt","rt-multi-thread", "io-util", "macros", "net"]} # 异步网络库
async-prost = "0.3" # 支持把protobuf封装成TCP frame
tracing-subscriber = "0.3"

[dev-dependencies]
anyhow = "1" # 错误处理
async-prost = "0.3" # 支持把protobuf封装成TCP frame
futures = "0.3" # 提供Stream trait
tokio = { version = "1", features = ["rt","rt-multi-thread", "io-util", "macros", "net"]} # 异步网络库
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.9" # 编译protobuf
